--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,9 @@ dependencies = [
     "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)",
     "nbmerge (>=0.0.4,<0.0.5)",
     "optuna (>=4.4.0,<5.0.0)",
-    "datasets (>=4.0.0,<5.0.0)"
+    "datasets (>=4.0.0,<5.0.0)",
+    "streamlit (>=1.48.0,<2.0.0)",
+    "opencensus-ext-azure (>=1.1.15,<2.0.0)"
 ]
 
 
