--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,6 +38,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: 3.10
+        check-latest: false
 
     - name: Install dependencies
       run: |
