--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,12 +28,9 @@ jobs:
   #       env:
   #         TEST_ENV: "1"   # <--- IMPORTANT: force le mode test dans api.py
   #       run: PYTHONPATH=app pytest test/ --maxfail=1 --disable-warnings -q
-
   deploy:
-    # needs: test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-
     steps:
       - uses: actions/checkout@v4
 
@@ -59,6 +56,38 @@ jobs:
           slot-name: production
           package: app
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+
+  # deploy:
+  #   # needs: test
+  #   runs-on: ubuntu-latest
+  #   if: github.ref == 'refs/heads/main'
+
+  #   steps:
+  #     - uses: actions/checkout@v4
+
+  #     - name: Set up Python version
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: '3.10'
+
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -r app/requirements.txt
+
+  #     - name: Azure Login
+  #       uses: azure/login@v2
+  #       with:
+  #         creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+  #     - name: Deploy to Azure Web App
+  #       uses: azure/webapps-deploy@v3
+  #       with:
+  #         app-name: analyse-de-sentiment
+  #         slot-name: production
+  #         package: app
+  #         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          
 
 
 
