--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     "optuna (>=4.4.0,<5.0.0)",
     "datasets (>=4.0.0,<5.0.0)",
     "streamlit (>=1.48.0,<2.0.0)",
-    "opencensus-ext-azure (>=1.1.15,<2.0.0)"
+    "opencensus-ext-azure (>=1.1.15,<2.0.0)",
+    "kaggle (>=1.7.4.5,<2.0.0.0)"
 ]
 
 
