--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
         run: pip install -r requirements.txt
       # - name: Run tests
       #   run: pytest
+      - name: Install Heroku CLI
+        run: |
+          curl https://cli-assets.heroku.com/install.sh | sh
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
