--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ transformers>=4.52.4,<5.0.0
 torch>=2.7.0,<3.0.0
 tensorflow>=2.11
 tensorflow-hub>=0.16.1,<0.17.0
-tensorflow-io-gcs-filesystem==0.31.0
+# tensorflow-io-gcs-filesystem==0.31.0
 opencv-python>=4.11.0.86,<5.0.0.0
 opencv-contrib-python>=4.11.0.86,<5.0.0.0
 optuna>=4.4.0,<5.0.0
